[tool.poetry]
name = "kladdera-api"
version = "0.1.0"
description = ""
authors = ["l"]
readme = "README.md"
packages = [{include = "kladdera_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.2.4"
djangorestframework = "^3.14.0"
django-allauth = "^0.61.1"
dj-rest-auth = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
