[tool.poetry]
name = "kladdera-api"
version = "0.1.0"
description = ""
authors = ["l"]
readme = "README.md"
packages = [{include = "kladdera_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^3.2.4"
djangorestframework = "^3.14.0"
dj-rest-auth = "^5.0.2"
djangorestframework-simplejwt = "^5.3.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
